added new levels

--- a/EPM_Availability_Parent_Kpis_1/EPM_Availability_Parent_Kpis_1.csproj
+++ b/EPM_Availability_Parent_Kpis_1/EPM_Availability_Parent_Kpis_1.csproj
@@ -18,6 +18,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Skyline.DataMiner.Dev.Automation" Version="10.2.0.25" />
+		<PackageReference Include="Skyline.DataMiner.Files.SLAnalyticsTypes" Version="10.4.10" />
 	</ItemGroup>
 	<ProjectExtensions>
 		<VisualStudio>
